# core-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  open-rules-upstream.yml  xpt-fuzz.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: cli.rs
crates/core-api/: Cargo.toml
crates/core-api/src/: api_types.rs  cdisc_context.rs  condition_inspect.rs  dataset_helpers.rs  domain_presence.rs  engine_semantics.rs  execution_provenance.rs  json_values.rs  lib.rs  match_datasets.rs  metadata_execution.rs  metadata_support.rs  open_rules_compat.rs  operation_columns.rs  operation_datasets.rs  operation_execution.rs  operation_fields.rs  operation_references.rs  operation_runtime.rs  report_variables.rs  result_normalization.rs  result_normalization_relrec.rs  result_overrides.rs  rule_preparation.rs  scope_filter.rs  split_domain_unique_set.rs  standard_filter.rs  static_codelists.rs  tests.rs  usdm_hand_ports.rs  usdm_jsonata.rs
crates/core-api/src/open_rules_compat/: classifier.rs  hand_port_rule_ids.csv  oracle_gap_rule_ids.csv  rule_specific_semantics.csv
crates/core-api/src/tests/: basic_validation.rs  helpers.rs  open_rules_codelists.rs  open_rules_data_loader.rs  open_rules_dataset_presence.rs  open_rules_dates.rs  open_rules_entities.rs  open_rules_idvarval.rs  open_rules_joins.rs  open_rules_joins_basic.rs  open_rules_joins_oracle_gaps.rs  open_rules_joins_timeline.rs  open_rules_joins_usdm.rs  open_rules_jsonata.rs  open_rules_match_datasets.rs  open_rules_metadata.rs  open_rules_metadata_dataset.rs  open_rules_metadata_domain.rs  open_rules_metadata_library.rs  open_rules_metadata_variable.rs  open_rules_operations.rs  open_rules_operations_distinct.rs  open_rules_operations_dy.rs  open_rules_operations_match_dataset.rs  open_rules_operations_metadata.rs  open_rules_operations_min_max.rs  open_rules_operations_pipeline.rs  open_rules_operations_record_count.rs  open_rules_operator_basics.rs  open_rules_oracle_semantics.rs  open_rules_reference_distinct.rs  open_rules_relrec.rs  open_rules_scope.rs  open_rules_standard_filter.rs  open_rules_unique_set.rs  open_rules_usdm.rs  open_rules_usdm_abbreviations.rs  open_rules_usdm_activity.rs  open_rules_usdm_blinding.rs  open_rules_usdm_identifiers.rs  (+6 more)
crates/core-api/tests/: golden.rs  golden_compat.rs  python_compat.rs
crates/core-cache/: Cargo.toml
crates/core-cdisc-library/: Cargo.toml
crates/core-cdisc-library/src/: lib.rs
crates/core-data/: Cargo.toml
crates/core-data/proptest-regressions/: xpt.txt
crates/core-data/src/: csv_dataset.rs  csv_records.rs  dataset_joins.rs  dataset_operations.rs  dataset_package.rs  dataset_paths.rs  dataset_transforms.rs  json_table.rs  lib.rs  open_rules_data_dir.rs  open_rules_variables.rs  row_key.rs  tests.rs  usdm_abbreviations.rs  usdm_collectors.rs  usdm_common.rs  usdm_content.rs  usdm_data_dir.rs  usdm_data_dir_datasets.rs  usdm_design.rs  usdm_geography.rs  usdm_identifiers.rs  usdm_json_schema.rs  usdm_objects.rs  usdm_population_columns.rs  usdm_product.rs  usdm_references.rs  usdm_row_builders.rs  usdm_study_structure.rs  usdm_text_templates.rs  usdm_timeline.rs  usdm_values.rs  xpt.rs
crates/core-data/src/tests/: xpt.rs
crates/core-engine/: Cargo.toml
crates/core-engine/src/: date_operators.rs  group_operators.rs  lib.rs  scalar_operators.rs  target_sort.rs  tests.rs
crates/core-engine/src/tests/: common.rs  errors.rs  target_variables.rs
crates/core-report/: Cargo.toml
crates/core-report/src/: lib.rs
crates/core-rule-model/: Cargo.toml
crates/core-rule-model/src/: enums.rs  lib.rs  name_normalization.rs  rule_loading.rs  yaml_literals.rs
crates/core-rule-model/tests/: golden.rs
docs/: open-rules-deferred-gap-inventory.md  open-rules-final-pr-summary-552-pass.md  open-rules-final-pr-summary-historical.md  open-rules-official-fixture-gap-candidates.md  open-rules-oracle-harness.md  open-rules-positive-zero-probe-inventory.md  open-rules-skipped-gap-next-actions.md  open-rules-standard-filter-gap-candidates.md  open-rules-synthetic-oracle-followups.md  open-rules-upstream-filing-plan.md  open-rules-upstream-issue-drafts.md  open-rules-upstream-regression-gate.md  open-rules-upstream-run-2026-06-19.md  open-rules-upstream-status.md  release-reproducibility.md  rust-file-split-plan.md  xpt-fuzzing.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/xpt_parser/: README.md  character_dataset_seed  ibm_float_seed  library_header_seed  namestr_header_seed  numeric_payload_seed  observation_padding_seed  validish_transport_headers_seed
fuzz/fuzz_targets/: xpt_parser.rs
scripts/: p21port_smoke.py
src/cdisc_rulekit/: __init__.py  classify.py  cli.py  compare_results.py  convert_core.py  core_runner.py  emit.py  errors.py  export_rules.py  generate_rules.py  generate_testdata.py  inputs.py  io_utils.py  load_open_rules.py  load_p21.py  load_p21_config.py  macro_analysis.py  map_rules.py  models.py  operator_inventory.py  p21_condition.py  reports.py  validate_generated.py  validate_outputs.py
tests/cdisc_rulekit/: conftest.py  test_classify.py  test_cli_generate.py  test_cli_generation.py  test_cli_readonly.py  test_cli_run_compare.py  test_cli_usage_errors.py  test_compare_results.py  test_core_runner.py  test_export_rules.py  test_generate_rule_outputs.py  test_generate_rules.py  test_io_utils.py  test_load_open_rules.py  test_load_p21.py  test_load_p21_config.py  test_macro_analysis.py  test_map_rules.py  test_models_io.py  test_operator_inventory.py  test_p21port_workflow.py  test_phase1_reports.py  test_validate_outputs.py
tests/open_rules/: baseline.json  curated-gap-baseline.json  curated-gap-rules.txt  curated-upstream-baseline.json  curated-upstream-rules.txt  (+1 more)
xtask/: Cargo.toml
xtask/src/: main.rs  release.rs
xtask/src/open_rules/: baseline.rs  discovery.rs  mod.rs  normalize.rs  report.rs  run.rs  score.rs  score_delta.rs  upstream.rs
xtask/src/open_rules/score/: identity.rs  normalization.rs  policy.rs  provenance.rs  summary.rs  tests.rs
(+128 files in other folders)
