[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdisc-rulekit"
version = "0.1.0"
description = "Read-only P21 and CDISC Open Rules catalog, mapping, and classification toolkit"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["-m", "not integration"]
markers = [
    "integration: slower subprocess-heavy workflow smoke tests run by explicit CI steps",
]
pythonpath = ["src"]
testpaths = ["tests"]
