[package]
name = "core-api"
version.workspace = true
edition.workspace = true

[dependencies]
core-data.workspace = true
core-engine.workspace = true
core-report.workspace = true
core-rule-model.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
