[package]
name = "core-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
core-cdisc-library.workspace = true
core-data.workspace = true
core-engine.workspace = true
core-report.workspace = true
core-rule-model.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
serde.workspace = true
tempfile.workspace = true
